scripts/k8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: master
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-at
                port:
                  number: 8080
