scripts/k8s/Ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2testats
spec:
  ingressClassName: nginx
  rules:
    - host: master
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-at
                port:
                  number: 8080
